force-app/main/default/objects/Special_Asset__c/Special_Asset__c.object-meta.xml
<CustomObject>
    <description>When a Property becomes a Special Asset, this record is created and related to the Property.</description>
    <label>Special Asset</label>
    <nameField>
        <label>Special Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Special Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>