force-app/main/default/objects/Special_Asset__c/fields/Accrual_Stop_Date__c.field-meta.xml
<CustomField>
    <fullName>Accrual_Stop_Date__c</fullName>
    <label>Accrual Stop Date</label>
    <type>Date</type>
</CustomField>