force-app/main/default/objects/Special_Asset__c/fields/Claim_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Claim_Accepted__c</fullName>
    <label>Claim Accepted</label>
    <type>Date</type>
</CustomField>