force-app/main/default/objects/Special_Asset__c/fields/Claim_Acknowledged_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Acknowledged_Date__c</fullName>
    <label>Claim Acknowledged Date</label>
    <type>Date</type>
</CustomField>