force-app/main/default/objects/Special_Asset__c/fields/Claim_File_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_File_Date__c</fullName>
    <label>Claim File Date</label>
    <type>Date</type>
</CustomField>