force-app/main/default/objects/Special_Asset__c/fields/Claim_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Claim_Resolved__c</fullName>
    <label>Claim Resolved</label>
    <type>Date</type>
</CustomField>