force-app/main/default/objects/Special_Asset__c/fields/Current_Asset_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Asset_Maturity_Date__c</fullName>
    <formula>Property__r.Current_Asset_Maturity_Date__c</formula>
    <label>Current Asset Maturity Date</label>
    <type>Date</type>
</CustomField>