force-app/main/default/objects/Special_Asset__c/fields/Days_To_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Resolve__c</fullName>
    <description>Created Date - Resolved Date</description>
    <formula>Resolved_Date__c -  DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Created Date - Resolved Date</inlineHelpText>
    <label>Days To Resolve</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>