force-app/main/default/objects/Special_Asset__c/fields/Estimated_Recovery_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Recovery_Date__c</fullName>
    <label>Estimated Recovery Date</label>
    <type>Date</type>
</CustomField>