force-app/main/default/objects/Special_Asset__c/fields/Forbearance_Term_Date__c.field-meta.xml
<CustomField>
    <fullName>Forbearance_Term_Date__c</fullName>
    <label>Forbearance Term Date</label>
    <type>Date</type>
</CustomField>