force-app/main/default/objects/Special_Asset__c/fields/In_FCL_del__c.field-meta.xml
<CustomField>
    <fullName>In_FCL_del__c</fullName>
    <label>In FCL?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>