force-app/main/default/objects/Special_Asset__c/fields/Internal_Title_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Internal_Title_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Title Attorney</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Special_Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>