force-app/main/default/objects/Special_Asset__c/fields/Is_Special_Asset_Associate__c.field-meta.xml
<CustomField>
    <fullName>Is_Special_Asset_Associate__c</fullName>
    <description>This will equal true if the Special Asset Associate is the same person as current User</description>
    <formula>$User.Id = Special_Asset_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This will equal true if the Special Asset Associate is the same person as current User</inlineHelpText>
    <label>Is Special Asset Associate</label>
    <type>Checkbox</type>
</CustomField>