force-app/main/default/objects/Special_Asset__c/fields/Is_Special_Asset_Manager__c.field-meta.xml
<CustomField>
    <fullName>Is_Special_Asset_Manager__c</fullName>
    <description>This will result in TRUE if the logged in User is the Special Asset Manager</description>
    <formula>$User.Id = Special_Asset_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This will result in TRUE if the logged in User is the Special Asset Manager</inlineHelpText>
    <label>Is Special Asset Manager</label>
    <type>Checkbox</type>
</CustomField>