force-app/main/default/objects/Special_Asset__c/fields/Litigation_Pending__c.field-meta.xml
<CustomField>
    <fullName>Litigation_Pending__c</fullName>
    <description>Indicates if Litigation is Pending for this Special Asset</description>
    <label>Litigation Pending</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>