force-app/main/default/objects/Special_Asset__c/fields/Loan_Performing__c.field-meta.xml
<CustomField>
    <fullName>Loan_Performing__c</fullName>
    <label>Loan Performing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>