force-app/main/default/objects/Special_Asset__c/fields/LOMOS_Id__c.field-meta.xml
<CustomField>
    <fullName>LOMOS_Id__c</fullName>
    <externalId>true</externalId>
    <label>LOMOS Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>