force-app/main/default/objects/Special_Asset__c/fields/Net_Loss_Severity_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Net_Loss_Severity_Recovery__c</fullName>
    <formula>Property__r.Approved_Advance_Amount_Used__c - Protected_Advances__c - Net_Proceeds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount Funded - Protected Advances - Net Proceeds</inlineHelpText>
    <label>Net Loss Severity Recovery</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>