force-app/main/default/objects/Special_Asset__c/fields/Original_Asset_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Asset_Maturity_Date__c</fullName>
    <formula>Property__r.Asset_Maturity_Date__c</formula>
    <label>Original Asset Maturity Date</label>
    <type>Date</type>
</CustomField>