force-app/main/default/objects/Special_Asset__c/fields/Outside_Title_Counsel__c.field-meta.xml
<CustomField>
    <fullName>Outside_Title_Counsel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outside Title Counsel</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Special Assets (Outside Title Counsel)</relationshipLabel>
    <relationshipName>Special_Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>