force-app/main/default/objects/Special_Asset__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Special Assets</relationshipLabel>
    <relationshipName>Special_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>