force-app/main/default/objects/Special_Asset__c/fields/Property_ALA__c.field-meta.xml
<CustomField>
    <fullName>Property_ALA__c</fullName>
    <description>ALA from the related Property</description>
    <formula>Property__r.ALA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Allocated Loan Amount of this Property</inlineHelpText>
    <label>Property ALA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>