force-app/main/default/objects/Special_Asset__c/fields/Protected_Advances__c.field-meta.xml
<CustomField>
    <fullName>Protected_Advances__c</fullName>
    <label>Protected Advances</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>