force-app/main/default/objects/Special_Asset__c/fields/Referred_for_FC_Date__c.field-meta.xml
<CustomField>
    <fullName>Referred_for_FC_Date__c</fullName>
    <label>Referred for FC Date</label>
    <type>Date</type>
</CustomField>