force-app/main/default/objects/Special_Asset__c/fields/REO_Date__c.field-meta.xml
<CustomField>
    <fullName>REO_Date__c</fullName>
    <description>Date that this Property became Real Estate Owned</description>
    <inlineHelpText>Date that this Property became Real Estate Owned</inlineHelpText>
    <label>REO Date</label>
    <type>Date</type>
</CustomField>