force-app/main/default/objects/Special_Asset__c/fields/Repurchased_Date__c.field-meta.xml
<CustomField>
    <fullName>Repurchased_Date__c</fullName>
    <label>Repurchased Date</label>
    <type>Date</type>
</CustomField>