force-app/main/default/objects/Special_Asset__c/fields/Resolution_Type__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Type__c</fullName>
    <label>Resolution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bring Current</fullName>
            </value>
            <value>
                <fullName>Covenant Default</fullName>
            </value>
            <value>
                <fullName>Deed In Lieu</fullName>
            </value>
            <value>
                <fullName>Discounted Payoff</fullName>
            </value>
            <value>
                <fullName>Extension Req</fullName>
            </value>
            <value>
                <fullName>FC with Guarantee</fullName>
            </value>
            <value>
                <fullName>FC without Guarantee</fullName>
            </value>
            <value>
                <fullName>Forbearance</fullName>
            </value>
            <value>
                <fullName>Foreclosure</fullName>
            </value>
            <value>
                <fullName>In-House Refi</fullName>
            </value>
            <value>
                <fullName>Mod/Assumption</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Payoff Pending</fullName>
            </value>
            <value>
                <fullName>Pursue Guarantee</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
            <value>
                <fullName>Reinstated</fullName>
            </value>
            <value>
                <fullName>REO with Guarantee</fullName>
            </value>
            <value>
                <fullName>REO without Guarantee</fullName>
            </value>
            <value>
                <fullName>Sale Pending</fullName>
            </value>
            <value>
                <fullName>Sell REO</fullName>
            </value>
            <value>
                <fullName>Special Asset Tracking</fullName>
            </value>
            <value>
                <fullName>Title Claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>