force-app/main/default/objects/Special_Asset__c/fields/Severity_Level__c.field-meta.xml
<CustomField>
    <fullName>Severity_Level__c</fullName>
    <label>Severity Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decision Required</fullName>
                <default>true</default>
                <label>Decision Required</label>
            </value>
            <value>
                <fullName>Key Updates Available</fullName>
            </value>
            <value>
                <fullName>On Active NOD List</fullName>
            </value>
            <value>
                <fullName>On Pre-Foreclosure List</fullName>
            </value>
            <value>
                <fullName>Other Special Assets</fullName>
            </value>
            <value>
                <fullName>Real Estate Owned</fullName>
            </value>
            <value>
                <fullName>Redemption Period</fullName>
            </value>
            <value>
                <fullName>Title Claim</fullName>
            </value>
            <value>
                <fullName>Trustee&apos;s Sale Date Set</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>