force-app/main/default/objects/Special_Asset__c/fields/Special_Asset_Manager__c.field-meta.xml
<CustomField>
    <fullName>Special_Asset_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Special Asset Associate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Special_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>