force-app/main/default/objects/Special_Asset__c/fields/Special_Asset_Reason__c.field-meta.xml
<CustomField>
    <fullName>Special_Asset_Reason__c</fullName>
    <description>The reason that this Property is a Special Asset</description>
    <label>Special Asset Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st Payment Default</fullName>
            </value>
            <value>
                <fullName>60+ Days</fullName>
            </value>
            <value>
                <fullName>75+ Days Delinquent</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Cross Default/Same Borrower</fullName>
            </value>
            <value>
                <fullName>Matured</fullName>
            </value>
            <value>
                <fullName>Non-Monetary Default</fullName>
            </value>
            <value>
                <fullName>Title</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>