force-app/main/default/objects/Special_Asset__c/fields/Status_Comment__c.field-meta.xml
<CustomField>
    <fullName>Status_Comment__c</fullName>
    <label>Status</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>