force-app/main/default/objects/Special_Asset__c/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <label>Strategy</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>