force-app/main/default/objects/Special_Asset__c/fields/Title_Claim_Representative__c.field-meta.xml
<CustomField>
    <fullName>Title_Claim_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Title Claim Representative</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Special Assets</relationshipLabel>
    <relationshipName>Special_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>