force-app/main/default/objects/Special_Asset__c/fields/Title_Company__c.field-meta.xml
<CustomField>
    <fullName>Title_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Title Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Special Assets</relationshipLabel>
    <relationshipName>Special_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>