force-app/main/default/objects/Special_Asset__c/fields/Title_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Title_Policy_Number__c</fullName>
    <label>Title Policy Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>