force-app/main/default/objects/Special_Asset__c/fields/Total_Broker_Commissions_Fees_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Broker_Commissions_Fees_Paid__c</fullName>
    <label>Total Broker Commissions &amp; Fees Paid</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>