force-app/main/default/objects/Special_Asset__c/fields/Valuation_Type__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Type__c</fullName>
    <formula>TEXT(Property__r.Valuation_Type__c)</formula>
    <label>Valuation Type</label>
    <type>Text</type>
</CustomField>