force-app/main/default/objects/Special_Asset__c/fields/Vintage_Year__c.field-meta.xml
<CustomField>
    <fullName>Vintage_Year__c</fullName>
    <formula>TEXT(YEAR(Property__r.First_Funding_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vintage Year</label>
    <type>Text</type>
</CustomField>