force-app/main/default/objects/Special_Asset__c/fields/Warehouse_Line__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Line__c</fullName>
    <formula>TEXT(Property__r.Deal__r.Warehouse_Line__c)</formula>
    <label>Warehouse Line</label>
    <type>Text</type>
</CustomField>