force-app/main/default/objects/Special_Asset__c/validationRules/No_resolution_type.validationRule-meta.xml
<ValidationRule>
    <fullName>No_resolution_type</fullName>
    <active>false</active>
    <errorConditionFormula>OR(NOT(ISNULL(Resolved_Date__c)) &amp;&amp; ISBLANK(TEXT(Resolution_Type__c)), ISNULL(Resolved_Date__c) &amp;&amp; NOT(ISBLANK(TEXT(Resolution_Type__c))))</errorConditionFormula>
    <errorMessage>Please make sure that both Resolved Date and Resolution Type are filled in.</errorMessage>
</ValidationRule>