force-app/main/default/objects/Special_Asset__c/validationRules/REO_Date_and_REO_Sell_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>REO_Date_and_REO_Sell_Date</fullName>
    <active>true</active>
    <description>These two fields cannot have a value at the same time.</description>
    <errorConditionFormula>NOT(ISNULL(REO_Date__c))&amp;&amp; NOT(ISNULL(REO_Sell_Date__c))</errorConditionFormula>
    <errorMessage>The REO Sell Date and the REO Date cannot have a value at the same time.</errorMessage>
</ValidationRule>