force-app/main/default/objects/Special_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>Special_Asset_Reason__c</columns>
    <columns>Resolution_Type__c</columns>
    <columns>Severity_Level__c</columns>
    <columns>Status_Comment__c</columns>
    <columns>Strategy__c</columns>
    <columns>Resolved_Date__c</columns>
    <columns>Special_Asset_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>